--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "symfony/dependency-injection": "^6.4",
     "symfony/config": "^6.4",
     "symfony/yaml": "^6.4",
-    "symfony/console": "^6.4",
+    "symfony/console": "^7.3",
     "symfony/validator": "^6.4",
     "symfony/serializer": "^6.4",
     "symfony/event-dispatcher": "^6.4",
@@ -21,16 +21,23 @@
     "ramsey/uuid": "^4.0",
     "psr/http-message": "^2.0",
     "psr/container": "^2.0",
-    "doctrine/dbal": "^3.0",
+    "doctrine/dbal": "^3.7",
     "nesbot/carbon": "^2.0",
     "symfony/dotenv": "^6.4",
-    "symfony/error-handler": "^6.4"
+    "symfony/error-handler": "^6.4",
+    "doctrine/migrations": "^3.9",
+    "doctrine/orm": "^3.3",
+    "doctrine/annotations": "^2.0",
+    "symfony/cache": "^7.3",
+    "symfony/orm-pack": "^2.4",
+    "doctrine/doctrine-migrations-bundle": "^3.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.0",
     "mockery/mockery": "^1.6",
     "phpstan/phpstan": "^1.10",
-    "squizlabs/php_codesniffer": "^3.7"
+    "squizlabs/php_codesniffer": "^3.7",
+    "symfony/maker-bundle": "^1.63"
   },
   "autoload": {
     "psr-4": {
