--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -55,7 +55,9 @@ server {
     }
 
     # Allow access to downloads
-    location ~ ^/downloads/ {
+    location /downloads/ {
+        alias /var/www/html/public/downloads/;
         add_header Content-Disposition "attachment";
+        try_files $uri =404;
     }
 }
