--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "doctrine/annotations": "^2.0",
     "symfony/cache": "^7.3",
     "symfony/orm-pack": "^2.4",
-    "doctrine/doctrine-migrations-bundle": "^3.4"
+    "doctrine/doctrine-migrations-bundle": "^3.4",
+    "symfony/webpack-encore-bundle": "^2.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.0",
