Ignore build assets, cleanup public/build/, update docs and scripts

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -11,6 +11,7 @@ RUN apt-get update && apt-get install -y \
     unzip \
     libzip-dev \
     libicu-dev \
+    default-mysql-client \
     && docker-php-ext-configure intl \
     && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip intl opcache \
     # Install Node.js, npm, and yarn
